This CL resets scroll and scale when a reload occurs because of toggling "Request desktop site".

BUG=693877

Review-Url: https://codereview.chromium.org/2898423002
Cr-Commit-Position: refs/heads/master@{#479276}

Former-commit-id: 4c2b2cf9b350fd155fd0c1b9159b5f5c9477ff94